--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Hello, World!</h1>
   <a href="https://anatomyof.at">anatomyof.ai</a> <br> 
-  <a href="http://endless.horse">endless.horse</a>a> <br>
+  <a href="http://endless.horse">endless.horse</a> <br>
   <a href="https://thezen.zone".thezen.zone</a> <br> 
 </body>
 </html>
