--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h1>Hello, World!</h1>
+  <p>Designers... hack the present to create the conditions of the future</p>
   <a href="https://anatomyof.ai">anatomyof.ai</a> <br>
   <a href="http://endless.horse">endless.horse</a> <br>
   <a href="https://thezen.zone">thezen.zone</a> <br> 
