Final Edits on Sunday 1-25-26

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <title>Hello, World!</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>Designers... hack the present to create the conditions of the future</p>
+  <h1>Hello, World! My name is Ray and I yearn to learn about making web pages</h1>
+  <p>Designers... hack the present to create the conditions of the future - Anne Balsamo</p>
+  <html>Using the html elements I will write this sentence. </html>
+  <body>I wrote this sentence using the body element. </body>
+  <a>The a element was used to write this sentence. </a>
+  <o1>This sentence was written with the o1 element. The br element was used for a line break. </o1> <br>
+  <a>I am writing this text to better understand how the elements work. -a-, -br-</a> <br>
   <a href="https://anatomyof.ai">anatomyof.ai</a> <br>
   <a href="http://endless.horse">endless.horse</a> <br>
   <a href="https://thezen.zone">thezen.zone</a> <br> 
+  <h1>Here's a picture of a balloon animal mouse that I like.</h1>
+  <img src="balloon-animal-art-masayoshi-matsumoto-japan-111.jpg" alt="Balloon Animal of Mouse">
 </body>
 </html>
 
