edits to text on thurs 1-29-26

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
   <h1>Hello, World! My name is Ray and I yearn to learn about making web pages</h1>
   <p>Designers... hack the present to create the conditions of the future - Anne Balsamo</p>
-  <html>Using the html elements I will write this sentence. </html>
-  <body>I wrote this sentence using the body element. </body>
-  <a>The a element was used to write this sentence. </a>
+  <html>I am a ATEC general senior who will graduate fall 2026. </html>
+  <body>I want to work in UX after I graduate. </body>
+  <a>I want to learn more about web design and coding to improve my prospects in that field. </a>
   <o1>This sentence was written with the o1 element. The br element was used for a line break. </o1> <br>
-  <a>I am writing this text to better understand how the elements work. -a-, -br-</a> <br>
+  <a>I am excited to see how this class can help me learn how to create websites in a fun and accessible way.</a> <br>
   <a href="https://anatomyof.ai">anatomyof.ai</a> <br>
   <a href="http://endless.horse">endless.horse</a> <br>
   <a href="https://thezen.zone">thezen.zone</a> <br> 
