Real FInal Edits On Thurs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Hello, World! My name is Ray and I yearn to learn about making web pages</h1>
-  <p>Designers... hack the present to create the conditions of the future - Anne Balsamo</p>
+  <p>Selections from CWD Index</p>
   <html>I am a ATEC general senior who will graduate fall 2026. </html>
   <body>I want to work in UX after I graduate. </body>
   <a>I want to learn more about web design and coding to improve my prospects in that field. </a>
